src/test/resources/30/single/xhtml/valid/custom-ns-attrs.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:foo="http://www.example.org/2001/10/#" xml:lang="en" lang="en">
    <head>
        <title>3.0.1 custom attributes</title>
    </head>
    <body>
        <p foo:bar="baz">custom attribute!</p>
    </body>
</html>
