src/test/resources/30/single/xhtml/invalid/md.xhtml
<html xmlns="http://www.w3.org/1999/xhtml" prefix="foaf: http://xmlns.com/foaf/0.1/ dc: http://purl.org/dc/terms/ xsd: http://www.w3.org/2001/XMLSchema# bibo: http://purl.org/ontology/bibo/">
  <head>
    <title>Page 7</title>
  </head>
  <body>
<a itemprop="foo">no href attribute</a>
<object type="text/html" itemprop="foo">no data attribute</object>


   </body>
</html>